Could be working

--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "url": "https://github.com"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^2.15.1",
+    "nodemon": "^1.17.4",
+    "semver": "^5.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0"
+  }
 }
