--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@quantumblack/test",
+  "name": "rapid-release",
   "version": "1.0.7",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com"
+    "url": "https://github.com/Knorcedger/rapid-release"
   },
-  "author": "",
+  "author": "Achilleas Tsoumitas",
   "license": "ISC",
   "dependencies": {
     "commander": "^2.15.1",
