--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0"
+  },
+  "bin": {
+    "rapid-release": "index.js"
   }
 }
