--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rapid-release",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Helps automate the required steps to create a new release",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,12 @@
     "type": "git",
     "url": "https://github.com/Knorcedger/rapid-release"
   },
-  "keywords": ["release", "release-automation", "npm-publish", "github-releases"],
+  "keywords": [
+    "release",
+    "release-automation",
+    "npm-publish",
+    "github-releases"
+  ],
   "author": "Achilleas Tsoumitas",
   "license": "ISC",
   "dependencies": {
